--- a/components/login/Login.module.css
+++ b/components/login/Login.module.css
@@ -10,12 +10,18 @@
   margin-bottom: 20px;
 }
 
+.error {
+  color: red;
+}
+
 .form {
   background-color: #ffffff;
   border-radius: 10px;
+  max-width: 350px;
+  width: 350px;
 }
 
 .input {
   height: 35px;
-  width: 200px;
+  width: 100%;
 }
